--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=gerenciador_mangas_hq.Gerenciador_Mangas_Hq
+main.class=br.unesp.igce.gerenciador_mangas_HQs.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
